2007-08-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_in_treeview),
	(gtk_theme_thumbnail_cb), (metacity_theme_thumbnail_cb),
	(icon_theme_thumbnail_cb), (changed_on_disk_cb): always generate
	thumbnails asynchronously. Mixing synchronous and asynchronous
	generation just doesn't work (bug #469849)

2007-08-27  Thomas Wood  <thos@gnome.org>

	Patch by: Gabor Kelemen <kelemeng@gnome.hu>

	* data/appearance.glade: Fix bug 470532 (gtk-delete stock id is marked for
	translation)

2007-08-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_get_thumbnail_from_cache):
	* gnome-wp-item.c: (gnome_wp_item_update_description): fix leaks (bug
	#469531)

2007-08-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (cb_show_details): simply set the upper bound of
	the DPI spin button to the maximum we consider reasonable. This is one
	way to make sure we don't get SIGFPE if for some reason
	gdk_screen_get_{width,height}_mm returns 0 (bug #469580)

2007-08-22  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_select_after_realize): if no background
	image set, select "no wallpaper"

2007-08-14  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* data/appearance.glade: correct the item width and enable line
	wrapping for long theme names (bug #466405)

2007-08-11  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_from_widget_cb): make sure we have a
	selection before trying to get the data (bug #465431)

2007-08-11  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): fix leak

2007-08-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_drag_data_received_cb),
	(themes_init): restrict drag'n'drop installation to the theme tab
	instead of the entire window so lockdown works properly

	* theme-installer.c: (gnome_theme_install_from_uri),
	(gnome_theme_installer_run):
	* theme-installer.h: fix double-free and use-after-free
