@@ -1,5 +1,10 @@
 2007-08-27  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-style.c: (update_thumbnail_in_treeview): don't leak the
+	thumbnails
+
+2007-08-27  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (update_in_treeview),
 	(gtk_theme_thumbnail_cb), (metacity_theme_thumbnail_cb),
 	(icon_theme_thumbnail_cb), (changed_on_disk_cb): always generate
